--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     depends_on:
       - db
   db:
-    image: mysql:5.7
+    build: db
     environment:
       MYSQL_ROOT_PASSWORD: password
     ports:
